# machine-learning-test

./: .gitignore  binary_classification_rice.md  linear_regression_taxi.md  pyproject.toml  req.txt  test.csv  test.txt
artifacts/binary_classification_rice_2/: rice_model.keras  rice_model_model.keras  rice_model_settings.pkl  rice_test.csv  rice_train.csv  rice_validation.csv
artifacts/linear_regression_taxi_1/: chicago_taxi_test.csv  chicago_taxi_train.csv  chicago_taxi_validation.csv  multi_feature_model.keras  multi_feature_settings.pkl  single_feature_model.keras  single_feature_settings.pkl  smart_model_model.keras  smart_model_settings.pkl  time_distance_lookup.json
src/binary_classification_rice_2/: logistic_regression_trainer.py  prepare_rice_data.py  rice_data_wrapper.py  rice_training.py  test.py  train.py  train_v2.py  validate.py
src/common/: base_data_wrapper.py  base_trainer.py  csv_utils.py  keras_utils.py  plot_utils.py  prediction_utils.py  split_utils.py  stats_utils.py  trainers.py  types.py
src/linear_regression_taxi_1/: analyze_time_distance.py  find_outliers.py  linear_regression_trainer.py  pipeline.py  plot_fare_vs_miles.py  predict.py  predict_multi_feature.py  predict_single_feature.py  prepare_taxi_data.py  process_chicago_taxi.py  split_data.py  taxi_data_wrapper.py  taxi_duration_estimator.py  taxi_training.py  test.py  train.py  train_multi_feature.py  train_single_feature.py  train_smart_model.py  tune_taxi_model.py  utils.py  validate.py
src/linear_regression_taxi_1/google/: predict.py  (+1 more)
tests/: test_output_consistency.py
