[project]
name = "linear-regression-taxi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    # "google-ml-edu==0.1.3", # Causes conflict with tensorflow-cpu, functionality replaced in src/utils.py
    "keras~=3.8.0",
    "matplotlib~=3.8.4", # Pinned to be compatible with numpy~=1.26.4
    "numpy~=1.26.4", # Pinned to < 2.0 for tensorflow-cpu compatibility
    "pandas~=2.2.0",
    "scikit-learn>=1.7.1",
    "tensorflow-cpu~=2.16.1", # Last official build for Intel-based macOS
]
